--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 /* Import Roboto from Google Fonts */
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 :root {
 	--primary-theme: rgb(9, 102, 9);
@@ -9,7 +9,7 @@
 	margin: 0;
 	padding: 0;
 	text-align: center;
-	font-family: "Roboto", Arial, sans-serif; /* Use Roboto for root */
+	font-family: 'Roboto', Arial, sans-serif; /* Use Roboto for root */
 }
 
 * {
@@ -17,7 +17,7 @@
 	padding: 0;
 	box-sizing: border-box;
 	transition: 0.1s ease;
-	font-family: "Roboto", Arial, sans-serif;
+	font-family: 'Roboto', Arial, sans-serif;
 	user-select: none;
 }
 /* body {
@@ -37,12 +37,12 @@
 	margin: 0 auto;
 	width: 100%;
 }
-.listItemsContainer {
+/* .listItemsContainer {
 	width: 100%;
 	min-height: 230px;
 	display: flex;
 	flex-direction: column;
-}
+} */
 .unorderedList {
 	list-style: none;
 	display: flex;
@@ -57,14 +57,19 @@
 	padding-left: 0.5rem;
 	border-radius: 5px;
 	width: 100%;
+	max-width: 420px; /* Set your desired max width */
 	text-align: left;
 	font-size: large;
-	font-family: "Roboto", Arial, sans-serif;
+	font-family: 'Roboto', Arial, sans-serif;
 	letter-spacing: 0.1rem;
 	user-select: none;
 	cursor: pointer;
 	display: grid;
 	grid-template-columns: 2fr 0.5fr;
+	text-wrap-style: pretty;
+	text-wrap-mode: wrap;
+	word-break: break-word; /* Add this */
+	white-space: normal; /* Ensure normal wrapping */
 }
 .listItem > span {
 	/* padding: 0.3rem; */
@@ -141,7 +146,7 @@
 	width: 100%;
 	height: 40px;
 	font-size: large;
-	font-family: "Roboto", Arial, sans-serif;
+	font-family: 'Roboto', Arial, sans-serif;
 }
 
 .widgetContainer {
@@ -155,8 +160,7 @@
 	backdrop-filter: blur(12px); /* glass effect */
 	-webkit-backdrop-filter: blur(12px); /* Safari support */
 	/* border: 1px solid rgba(255, 255, 255, 0.18); */
-	padding: 1rem;
-	width: 100%;
+	padding: 0.3rem;
 }
 
 .bentoGrid {
@@ -190,6 +194,7 @@
 .bentoItem.large {
 	grid-column: span 2;
 	grid-row: span 1;
+	height: fit-content;
 }
 
 .bentoItem.wide {
@@ -200,6 +205,9 @@
 }
 .bentoItem.todo {
 	grid-column: span 1;
+	height: fit-content;
+	width: fit-content;
+	padding: 1rem;
 }
 .bentoItem.diet {
 	grid-column: span 2;
@@ -231,7 +239,11 @@
 	justify-content: center;
 	align-items: center;
 	user-select: none;
-	background: linear-gradient(135deg, rgb(23, 23, 23) 0%, rgb(19, 19, 19) 100%);
+	background: linear-gradient(
+		135deg,
+		rgb(23, 23, 23) 0%,
+		rgb(19, 19, 19) 100%
+	);
 	border-bottom: 4px solid var(--primary-theme);
 }
 /* .timeContainer {
@@ -259,7 +271,7 @@ body {
 /* Typing Practice */
 .TypingContainer {
 	display: grid;
-	grid-template-rows: 8fr 1fr;
+	grid-template-rows: fit-content 1fr;
 	gap: 1rem;
 	width: 100%;
 	padding: 2rem;
@@ -269,6 +281,7 @@ body {
 	width: 100%;
 	height: 100%;
 	outline: none;
+	padding: 0.3rem;
 }
 
 .InputBox {
@@ -280,4 +293,5 @@ body {
 	background-color: #1a1a1a;
 	padding: 1rem;
 	border-radius: 1px;
+	height: fit-content;
 }
